# better-mlops

./: .gitignore  README.md  argocd-application.yml  playbook.yml  pyproject.toml
.github/workflows/: test_build.yml
argo-workflows-tasks/mlflow-connect/: list_experiments.py
demo-argo-events/: demo-event-sensor-1.yml
demo-argo-workflows/: demo-workflow-7.yml
manifests-argo-events/: mlflow-sealed-secret.yml
manifests-argocd/: deployment.yml
roles/local/tasks/: main.yml
roles/local/vars/: main.yml
