[project]
name = "better-mlops"
version = "1.16.0"
description = ""
authors = [
    {name = "Safarveisi",email = "sajad.safarveisi@gmail.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pyyaml (>=6.0.2,<7.0.0)",
    "kubernetes (>=33.1.0,<34.0.0)",
    "jsonpath (>=0.82.2,<0.83.0)"
]

[tool.poetry]
package-mode = false

[tool.ruff]
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM"]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
pre-commit = "^4.2.0"
pytest = "^8.4.1"
